fix: decrease gap between nav items, decrease limit for tag length before truncation.

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -46,10 +46,10 @@ nav {
     }
 
     button:not(:first-child) {
-        margin-top: $large-spacing;
+        margin-top: $small-spacing;
     }
 
     button:last-child {
-        margin-bottom: $large-spacing;
+        margin-bottom: $small-spacing;
     }
 }
